fix: don't wrap emphasis

--- a/www/src/styles/main.scss
+++ b/www/src/styles/main.scss
@@ -54,6 +54,7 @@ em {
 	color: $gold;
 	font-weight: 700;
 	font-style: normal;
+	text-wrap: nowrap;
 }
 
 h2 {
